2010-11-14  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16315: Wrong reference to unzip class

2010-11-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta1
	* Added feature #16215: Allow array as localconf.php configuration values

2010-11-13  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #15666: sys_language table icon should be the flag you selected, using the new flag sprite (Thanks to Steffen Ritter)
	* Follow-up to #16302: Fixes missing tplRow leading to a broken "Edit TypoScript file content in t3editor" (Thanks to Fabrizio Branca)

2010-11-13  Benjamin Mack  <benni@typo3.org>

	* Added feature: New option "noScale" for getImgResource() to display the original image instead of a scaled one (Thanks to Stefan Geith)
	* Fixed bug #7855: IRRE doesn't save collapse/expand state of nested IRRE records
	* Fixed bug #9508: Workspace preview link should work in multidomain-environments (Thanks to Michael Klapper)
	* Added feature #13170: Workspace Owners should be manageable with groups as well (Thanks to Tolleiv Nietsch)

2010-11-12  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16315: New extension manager part 1: splitting classes

2010-11-12  Ingo Renner  <ingo@typo3.org>

	* Added feature #16337: System health status self monitoring
	* Added feature #16338: Scheduler task to regularly execute the status report checks

2010-11-12  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16357: visualize beeing in an workspace by coloring the topbar (Thanks to Lars Zimmermann)

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16370, Follow-up to #15094: SVG TypoScript object unuseable after tslib_content splitup
	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)
	* Fixed bug #6001: Install Tool image tests fail when there are spaces in the path name of im_path, and auto-detection of IM under Windows improved
