@@ -388,8 +388,8 @@ CREATE TABLE tt_content (
   endtime int(11) unsigned DEFAULT '0' NOT NULL,
   colPos tinyint(3) unsigned DEFAULT '0' NOT NULL,
   subheader varchar(255) DEFAULT '' NOT NULL,
-  spaceBefore tinyint(4) unsigned DEFAULT '0' NOT NULL,
-  spaceAfter tinyint(4) unsigned DEFAULT '0' NOT NULL,
+  spaceBefore smallint(5) unsigned DEFAULT '0' NOT NULL,
+  spaceAfter smallint(5) unsigned DEFAULT '0' NOT NULL,
   fe_group varchar(100) DEFAULT '0' NOT NULL,
   header_link varchar(255) DEFAULT '' NOT NULL,
   imagecaption_position varchar(6) DEFAULT '' NOT NULL,
