@@ -1461,8 +1461,8 @@ $TCA['tt_content'] = array(
 			'label' => 'LLL:EXT:cms/locallang_ttc.xml:spaceBefore',
 			'config' => array(
 				'type' => 'input',
-				'size' => '3',
-				'max' => '3',
+				'size' => '5',
+				'max' => '5',
 				'eval' => 'int',
 				'checkbox' => '0',
 				'range' => array(
@@ -1476,8 +1476,8 @@ $TCA['tt_content'] = array(
 			'label' => 'LLL:EXT:cms/locallang_ttc.xml:spaceAfter',
 			'config' => array(
 				'type' => 'input',
-				'size' => '3',
-				'max' => '3',
+				'size' => '5',
+				'max' => '5',
 				'eval' => 'int',
 				'checkbox' => '0',
 				'range' => array(
